--- a/app/src/main/res/layout/activity_release.xml
+++ b/app/src/main/res/layout/activity_release.xml
@@ -7,50 +7,49 @@
     tools:context="com.yl.lenovo.kchat.ReleaseActivity">
 
     <EditText
+        android:gravity="top"
+        android:background="@null"
         android:id="@+id/et_moment_add_content"
         android:layout_width="0dp"
-        android:layout_height="168dp"
-
+        android:layout_height="100dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:hint="这一刻的idea"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
-
-
-
     <cn.bingoogolapple.photopicker.widget.BGASortableNinePhotoLayout
         android:id="@+id/snpl_moment_add_photos"
-        style="@style/WrapWrap"
-        android:layout_width="218dp"
-        android:layout_height="201dp"
-        android:layout_margin="10dp"
+
+        android:layout_width="365dp"
+        android:layout_height="177dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="22dp"
         app:bga_snpl_deleteDrawable="@mipmap/bga_pp_ic_delete"
         app:bga_snpl_deleteDrawableOverlapQuarter="false"
         app:bga_snpl_editable="true"
         app:bga_snpl_itemCornerRadius="0dp"
-        app:bga_snpl_itemSpanCount="3"
+        app:bga_snpl_itemSpanCount="4"
         app:bga_snpl_itemWhiteSpacing="4dp"
         app:bga_snpl_itemWidth="0dp"
         app:bga_snpl_maxItemCount="9"
         app:bga_snpl_otherWhiteSpacing="100dp"
         app:bga_snpl_placeholderDrawable="@mipmap/bga_pp_ic_holder_dark"
-        app:bga_snpl_plusDrawable="@mipmap/bga_pp_ic_plus"
+        app:bga_snpl_plusDrawable="@drawable/ic_camera_alt_black_24dp"
         app:bga_snpl_plusEnable="true"
         app:bga_snpl_sortable="true"
-        app:layout_constraintHorizontal_bias="0.053"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.909"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_moment_add_content"
