--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
 
     tools:context="com.yl.lenovo.kchat.LoginActivity">
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/login_background_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
