--- a/app/src/main/res/layout/item_dynamic_layout.xml
+++ b/app/src/main/res/layout/item_dynamic_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:fresco="http://schemas.android.com/tools"
     android:descendantFocusability="blocksDescendants"
     android:orientation="vertical">
 
@@ -25,13 +26,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <cn.bingoogolapple.photopicker.widget.BGAImageView
+                <com.facebook.drawee.view.SimpleDraweeView
                     android:id="@+id/iv_item_moment_avatar"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginRight="8dp"
-                    android:src="@mipmap/avatar"
-                    app:bga_iv_circle="true"/>
+                    fresco:placeholderImage="@mipmap/avatar"
+                   />
 
                 <LinearLayout
                     android:layout_width="match_parent"
