--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -6,7 +6,7 @@
     android:padding="5dp">
 
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/iv_img"
         android:layout_width="70dp"
         android:layout_height="70dp"
