--- a/app/src/main/res/layout/guid_view1.xml
+++ b/app/src/main/res/layout/guid_view1.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/guid_view_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
