--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -115,6 +115,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/tv_forgot_pwd"
                     android:textColor="@color/colorPrimary"
                     android:layout_alignParentLeft="true"
                     android:text="忘记密码"
